--- a/style.css
+++ b/style.css
@@ -21,27 +21,29 @@ h2{
     display: grid;
     grid-template-columns: 20% 80%;
     padding: 20px;
-    background-color: #333;
+    background-color: #000000;
+    opacity: 90%;
     color: white;
-    height: 90px;
+    height: 40px;
 }
 .logo {
     width: 100px; 
-    height: auto;
+    height: 100px;
+    margin-top: -30px;
   
   }
   
   .nav-links {
     list-style: none;
     padding-left:30px ;
-    margin-bottom: 30px;
+    margin-bottom: 0px;
+
   }
   
   .nav-links li {
     margin-right: 20px; 
     display: inline;
-    margin-bottom: 30px;
-    margin-top: 0px;
+    
   }
   
   .nav-links li a {
@@ -49,9 +51,11 @@ h2{
     text-decoration: none;
     color: white;
     margin: 0;
+    margin-top: -50px;
     text-align: center;
 
   }
+
 
 #buttoncta {
     background-color:#d792b1;
